--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1608,6 +1608,30 @@ input {
 .fc-col-header {
   width: 100%;
 }
+.fc-day.booked {
+  background-color: var(--theme-color);
+  cursor: pointer;
+}
+.fc-day.booked .fc-event {
+  color: white;
+  font-size: 2.6rem;
+  font-family: var(--Roboto-Regular);
+}
+.fc-day.booked .fc-daygrid-day-number {
+  font-size: 3.5rem !important;
+  font-family: var(--Roboto-Regular) !important;
+  color: white !important;
+}
+.fc-daygrid-event-dot {
+  display: none;
+}
+.fc-event-time {
+  display: none;
+}
+.fc-h-event {
+  background-color: transparent !important;
+  border: none;
+}
 
 /* calendar screen end */
 
