res minur changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1632,13 +1632,55 @@ input {
   background-color: transparent !important;
   border: none;
 }
-
+button.theme-btn.Booking-Cancel {
+  width: auto;
+}
+.fc-daygrid-dot-event .fc-event-title {
+  font-weight: unset !important;
+}
+.fc .fc-daygrid-day-number {
+  padding: 0;
+}
+.fc-timegrid-col-events .fc-event-title.fc-sticky {
+  font-size: 1.8rem !important;
+  font-family: var(--Roboto-Regular) !important;
+  color: white;
+}
+.fc .fc-timegrid-axis-cushion {
+  font-size: 1.6rem !important;
+  font-family: var(--Roboto-Medium) !important;
+  color: black;
+}
+.fc .fc-timegrid-slot-label-cushion {
+  font-size: 1.4rem !important;
+  font-family: var(--Roboto-Regular) !important;
+  color: black !important;
+}
+.fc-list-day-side-text {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: var(--sb-title-color);
+  text-decoration: none;
+}
+.fc a[data-navlink]:hover {
+  text-decoration: none;
+}
+.fc-list-day-text {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Regular);
+  color: var(--sb-title-color);
+  text-decoration: none;
+}
+.fc-event.fc-event-start.fc-event-end.fc-event-past.fc-list-event {
+  font-size: 1.4rem;
+  font-family: var(--Roboto-Regular);
+}
 /* calendar screen end */
 
 /* popup css start */
 
 .booking-popup-wrap,
-.rental-popup-wrap , 
+.rental-popup-wrap,
 .calender-popup-wrap {
   height: 100%;
   width: 100%;
@@ -1657,7 +1699,8 @@ input {
 .rental-popup-wrap.active {
   display: flex;
 }
-.booking-popup-main , .calender-popup-main {
+.booking-popup-main,
+.calender-popup-main {
   background-color: white;
   max-width: 580px;
   width: 100%;
@@ -2611,3 +2654,4 @@ p.release-para {
   width: 15px;
 }
 /* add vehicle screen end */
+                                                                                                                                             
