--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,10 @@
 @media (max-width: 1620px) {
+  .fc-day.booked .fc-event {
+    font-size: 2.1rem;
+  }
+  .fc-day.booked .fc-daygrid-day-number {
+    font-size: 3rem !important;
+  }
   .booking-popup-main {
     overflow-y: auto;
     height: 500px;
@@ -35,6 +41,9 @@
 }
 
 @media (max-width: 1450px) {
+  .calender-popup-main {
+    height: 450px;
+  }
   .coupons-gift-main {
     gap: 20px 0;
   }
@@ -248,6 +257,12 @@
 }
 
 @media (max-width: 991px) {
+  .fc-day.booked .fc-event {
+    font-size: 1.8rem;
+  }
+  .fc-day.booked .fc-daygrid-day-number {
+    font-size: 2rem !important;
+  }
   .user-driver-booking .user-driver-booking-inner {
     width: 100%;
   }
@@ -413,6 +428,18 @@
 }
 
 @media (max-width: 585px) {
+  .fc-timegrid-col-events .fc-event-title.fc-sticky {
+    font-size: 1.2rem !important;
+  }
+  .fc-daygrid-day-number {
+    font-size: 1.8rem !important;
+  }
+  .fc-day.booked .fc-event {
+    font-size: 1.6rem;
+  }
+  .fc-day.booked .fc-daygrid-day-number {
+    font-size: 1.8rem !important;
+  }
   .calender-popup-main {
     max-width: 400px;
   }
@@ -494,7 +521,6 @@
   .vehicle-listing-left {
     gap: 10px;
   }
-
   .vehicles-listing-right {
     text-align: center;
     margin-top: 10px;
@@ -511,7 +537,6 @@
     text-align: center;
     margin-top: 10px;
   }
-
   .release-liability-popup {
     max-width: 480px;
     width: 100%;
@@ -545,9 +570,8 @@
     padding: 20px 10px;
   }
   #header {
-    padding: 25px 5px;
+    padding: 15px 5px;
   }
-
   .header-right-side {
     gap: 5px;
   }
@@ -592,6 +616,9 @@
 }
 
 @media (max-width: 490px) {
+  .fc-day.booked .fc-event {
+    font-size: 1.4rem;
+  }
   .booking-popup-main {
     max-width: 400px;
     height: 440px;
@@ -845,6 +872,9 @@
 }
 
 @media (max-width: 375px) {
+  .fc-day.booked .fc-event {
+    font-size: 1.2rem;
+  }
   .calender-popup-main {
     max-width: 320px;
   }
