--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -12,10 +12,10 @@
   iframe.payment-detail-map {
     height: 630px;
   }
-  .payment-detail-inner.left {
+  /* .payment-detail-inner.left {
     height: 630px;
     padding: 30px;
-  }
+  } */
   .coupons-gift-area {
     width: 30%;
   }
@@ -40,7 +40,10 @@
   }
 }
 
-@media (max-width: 1450px) {
+@media (max-width: 1550px) {
+  iframe.payment-detail-map.w-100 {
+    height: 507px;
+}
   .calender-popup-main {
     height: 450px;
   }
@@ -91,13 +94,19 @@
 }
 
 @media (max-width: 1366px) {
+  #contact_wrapper .row.dt-row {
+    overflow: auto;
+  }
+  #contact_wrapper .row.dt-row .col-sm-12 {
+    min-width: 1200px;
+  }
   iframe.payment-detail-map {
     height: 550px;
   }
-  .payment-detail-inner.left {
+  /* .payment-detail-inner.left {
     height: 550px;
     padding: 30px;
-  }
+  } */
   .review-discrip {
     line-height: 1.3;
     margin-top: 10px;
@@ -137,12 +146,7 @@
   .coupons-gift-area {
     padding: 20px 20px;
   }
-  #contact_wrapper .row.dt-row {
-    overflow: auto;
-  }
-  #contact_wrapper .row.dt-row .col-sm-12 {
-    min-width: 1200px;
-  }
+  
   .vehicles-listing-area {
     padding: 10px 10px;
     height: 180px;
@@ -189,6 +193,9 @@
 }
 
 @media (max-width: 1202px) {
+  iframe.payment-detail-map.w-100 {
+    height: 486px;
+}
   .booking-detail-img {
     height: 100px;
     width: 100px;
@@ -428,6 +435,9 @@
 }
 
 @media (max-width: 585px) {
+  iframe.payment-detail-map.w-100 {
+    height: 400px;
+}
   .fc-timegrid-col-events .fc-event-title.fc-sticky {
     font-size: 1.2rem !important;
   }
