--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,7 @@ ul.dash-sb-nav-area {
   top: 0;
   z-index: 99;
 }
+
 .header-main {
   display: flex;
   align-items: center;
@@ -253,6 +254,7 @@ button.menu-cls-btn {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .notification i {
   color: white;
@@ -318,6 +320,61 @@ button.menu-cls-btn {
   font-family: var(--Roboto-Medium);
   font-size: 1.5rem;
   color: black;
+}
+.notify-title {
+  background-color: white;
+  color: var(--sb-title-color);
+  padding: 10px 0;
+  font-size: 2.5rem;
+  font-family: var(--Roboto-Bold);
+  text-align: center;
+  margin-bottom: 20px;
+}
+.notification-dropdownarea {
+  background-color: var(--theme-color);
+  position: absolute;
+  right: 0;
+  width: 300px;
+  max-height: 370px;
+  height: auto;
+  overflow-y: auto;
+  top: 40px;
+  box-shadow: 0 0 10px 5px #0000003d;
+  display: none;
+  z-index: 99;
+}
+.notification-dropdownarea.active {
+  display: block;
+}
+.notification-list {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  gap: 10px;
+  padding: 0 10px;
+  margin-bottom: 20px;
+}
+.notifi-name-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+.notify-name {
+  font-size: 1.6rem;
+  font-family: var(--Roboto-Medium);
+  color: white;
+}
+.notify-date {
+  font-size: 1.4rem;
+  font-family: var(--Roboto-Regular);
+  color: white;
+}
+.notify-discrip {
+  font-size: 1.4rem;
+  font-family: var(--Roboto-Light);
+  color: white;
+  line-height: 1.2;
 }
 
 /* header end */
@@ -1500,12 +1557,13 @@ input {
   font-family: var(--Roboto-Regular);
   text-decoration: none;
 }
-#calendar table.fc-col-header tr th:nth-child(1) {
+
+/* #calendar table.fc-col-header tr th:nth-child(1) {
   border-radius: 25px 0 0 0;
 }
 #calendar table.fc-col-header tr th:nth-last-child(1) {
   border-radius: 0 25px 0 0;
-}
+} */
 #calendar table.fc-scrollgrid-section.fc-scrollgrid-section-header th {
   padding: 20px 0 !important;
 }
@@ -1961,7 +2019,10 @@ img.img-fluid.vehicle-lis-img {
   background-color: white;
   box-shadow: 0 0 10px 5px #00000012;
   padding: 50px;
-  height: 750px;
+  height: auto;
+}
+iframe.payment-detail-map.w-100 {
+  height: 527px;
 }
 /* payment detail screen end */
 
