--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --Roboto-Black: "Roboto-Black";
@@ -14,6 +15,7 @@
   --nav-text-color: #5d646d;
   --theme-color: #2b3282;
   --sb-title-color: #0d233e;
+  --poppins-font-family : "Poppins", sans-serif;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -1003,6 +1005,22 @@ button.edit-profile-btn:disabled {
   background-color: #2b32821c;
   color: var(--sb-title-color);
   border-color: #2b32821c;
+}
+.password-field-area {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+}
+.eye-btn {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+  color: black;
+  opacity: 50%;
 }
 
 /* profile screen end */
@@ -2716,3 +2734,61 @@ p.release-para {
 }
 /* add vehicle screen end */
                                                                                                                                              
+
+/* thank you popup css start */
+.thankyou-popup-wrap {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  width: 100%;
+  box-shadow: 0 0 10px 1px #00000021;
+  background-color: white;
+  z-index: 999;
+  padding: 20px 30px;
+  display: none;
+}
+.thankyou-popup-wrap.active {
+  display: block;
+}
+span.right-icon-area {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background-color: var(--theme-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+span.right-icon-area .fa-check {
+  color: white;
+  font-size: 9rem;
+}
+.thankyou-popup-wrap {
+  text-align: center;
+}
+.thankyou-popup-inner {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px 0;
+  align-items: center;
+}
+.thankyou-title {
+  font-size: 6rem;
+  font-family: var(--poppins-font-family);
+  color: var(--sb-title-color);
+  font-weight: 900;
+}
+.view-listing-link {
+  background-color: var(--theme-color);
+  text-decoration: none;
+  color: white;
+  font-family: var(--Roboto-Regular);
+  font-size: 2rem;
+  padding: 15px 20px ;
+  border-radius: 5px;
+}
+/* thank you popup css end */
